<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#0000ff"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/QNumber"
        android:text="@string/question_nr"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectedoption"
            android:visibility="gone"
            android:id="@+id/selectoption"
            android:textAlignment="center"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/correct"
            android:visibility="gone"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:text="@string/correct_answer"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:id="@+id/question"
            android:text="@string/question_0"
            android:textSize="19sp"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/options"
        android:layout_gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"

            android:id="@+id/optionA"
            android:background="@drawable/options"
            android:text="@string/question_0_A"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:paddingTop="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"

            android:id="@+id/optionB"
            android:background="@drawable/options"
            android:text="@string/question_0_B"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:paddingTop="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/optionC"
            android:background="@drawable/options"
            android:text="@string/question_0_C"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:paddingTop="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"

            android:id="@+id/optionD"
            android:background="@drawable/options"
            android:text="@string/question_0_D"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:paddingTop="15dp"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/score"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/Score"
            android:padding="10dp"
            android:layout_gravity="end"/>
        <ProgressBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#87ceeb"
            android:layout_gravity="bottom"
            android:id="@+id/progressbar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:indeterminate="false">

        </ProgressBar>
    </LinearLayout>
</LinearLayout>







